# reminduck

./: .gitignore  README.md  io.github.ellie_commons.reminduck.flathub.yml  io.github.ellie_commons.reminduck.legacy.yml  io.github.ellie_commons.reminduck.yml  io.github.elly_code.reminduck.flathub.yml  io.github.elly_code.reminduck.yml  io.github.elly_codes.reminduck.flathub.yml  io.github.elly_codes.reminduck.legacy.yml  io.github.elly_codes.reminduck.yml  meson.build
.github/workflows/: CI.yml
data/: Application.css  com.github.matfantinel.reminduck.appdata.xml.in  com.github.matfantinel.reminduck.gschema.xml  io.github.ellie_commons.reminduck.desktop.in  io.github.ellie_commons.reminduck.gresource.xml  io.github.ellie_commons.reminduck.gschema.xml  io.github.ellie_commons.reminduck.metainfo.xml.in  meson.build  reminduck.desktop.in  reminduck.gresource.xml  reminduck.gschema.xml  reminduck.metainfo.xml.in
po/: LINGUAS  POTFILES  ca.po  de.po  es.po  fr.po  io.github.ellie_commons.reminduck.pot  io.github.elly_codes.reminduck.pot  it.po  meson.build  nl.po  pt.po  ru.po  tr.po  vi.po
po/extra/: LINGUAS  POTFILES  ca.po  de.po  es.po  extra.pot  fr.po  it.po  meson.build  nl.po  pt.po  ru.po  tr.po
src/: Application.vala  Database.vala  MainWindow.vala  meson.build
src/Objects/: Quack.vala  Reminder.vala
src/Services/: Database.vala  Utils.vala
src/Views/: ReminderEditor.vala  RemindersView.vala  SettingsView.vala  WelcomeView.vala
src/Widgets/: QuackBox.vala  RepeatBox.vala  SaveDeleteBox.vala  SettingsPopover.vala
src/Widgets/Views/: ReminderEditor.vala  RemindersView.vala
windows/: deploy.sh
