sources = files (
    'Application.vala',
    'MainWindow.vala',
    'Services/Database.vala',
    'Services/Utils.vala',
    'Objects/Reminder.vala',
    'Objects/Quack.vala',
    'Views/ReminderEditor.vala',
    'Views/RemindersView.vala',
    'Views/WelcomeView.vala',
    'Views/SettingsView.vala',
)
